--- a/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
+++ b/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
@@ -65,12 +65,12 @@
    "source": [
     "# !pip install scikit-learn imageio\n",
     "\n",
-    "import cv2 as cv2\n",
+    "import cv2 as cv\n",
     "import numpy as np\n",
     "import os\n",
     "import math\n",
     "import tarfile\n",
-    "#from utils import *\n",
+    "from utils import *\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -1448,7 +1448,7 @@
     "## YOUR CODE HERE\n",
     "# create a LINEAR classifier instance here (LinearSVC): \n",
     "\n",
-    "model = LinearSVC(loss='hinge',max_iter=10000,C=0.01)\n",
+    "model = LinearSVC(loss='hinge',max_iter=5000,C=1.0)\n",
     "# Train the classifier (LinearSVC.fit).\n",
     "print (\"Training a Linear SVM Classifier\")\n",
     "model.fit(training_features, labels)\n",
@@ -1465,7 +1465,7 @@
    "source": [
     "#### Justification of the chosen parameters \n",
     "\n",
-    "In this case we chose a `C = 1.0` which is the default parameter for LinearSVC for sklearn and we extended max_iter to `10'000` (the default value is `1'000`). This extension was made for the sake of the accuracy. Enabling more iterations leads to a longer computation time but also increases the precision."
+    "In this case we chose a `C = 1.0` which is the default parameter for LinearSVC for sklearn and we extended max_iter to `5'000` (the default value is `1'000`). This extension was made for the sake of the accuracy. Enabling more iterations leads to a longer computation time but also increases the precision. Increasing to 10'000 does not lead to a significant improvement, so taking a value in between (almost in the middle) seems to be a good trade off."
    ]
   },
   {
@@ -1516,6 +1516,7 @@
     "prediction_neg = model.predict(test_features_n)\n",
     "tn = accuracy_score(prediction_neg, test_labels_n)          \n",
     "print(\"Success rate negative samples:\", tn)\n",
+    "print(\"Estimation error negative samples:\", 1-tn)\n",
     "\n",
     "print (\"Estimating the test data [Positive samples]\")\n",
     "# Extract features\n",
@@ -1532,6 +1533,7 @@
     "prediction_pos = model.predict(test_features_p)\n",
     "tp = accuracy_score(prediction_pos, test_labels_p) \n",
     "print(\"Success rate positive samples:\", tp)\n",
+    "print(\"Estimation error positive samples:\", 1-tp)\n",
     "\n",
     "### F1 score\n",
     "fn = 1-tn\n",
@@ -1547,7 +1549,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add comments"
+    "**Observations**\n",
+    "\n",
+    "It is observable that the error matches the values written below. It can be seen that it is easier to detect negative samples than positive ones which is what we should expect. A person can easily not been detected if the person blends in with the background for instance, while it is unlikely to have a picture that could ressemble to a person without being one and be classified as a person.\n",
+    "\n",
+    "We can conclude that in 91% of the case the classification is correct."
    ]
   },
   {
@@ -1600,8 +1606,9 @@
     "neg_feat, neg_label = _extract_feature(path_img_neg, descriptor=new_hog, label=0, hog_size=win_size)   \n",
     "training_features.extend(neg_feat)\n",
     "labels.extend(neg_label)\n",
+    "print('Feature size: {}'.format(training_features[0].shape))\n",
     "\n",
-    "new_model = LinearSVC(loss='hinge',max_iter=10000,C=0.01)\n",
+    "new_model = LinearSVC(loss='hinge',max_iter=5000,C=1.0)\n",
     "print (\"Training a Linear SVM Classifier\")\n",
     "new_model.fit(training_features, labels)\n",
     "\n",
@@ -1617,6 +1624,7 @@
     "prediction_neg = new_model.predict(test_features_n)\n",
     "tn = accuracy_score(prediction_neg, test_labels_n)          \n",
     "print(\"Success rate negative samples:\", tn)\n",
+    "print(\"Estimation error negative samples:\", 1-tn)\n",
     "\n",
     "print (\"Estimating the test data [Positive samples]\")                               \n",
     "test_pos_feat, label_pos_test = _extract_feature(path_img_pos, new_hog, label=1, hog_size=win_size)\n",
@@ -1627,6 +1635,7 @@
     "prediction_pos = new_model.predict(test_features_p)\n",
     "tp = accuracy_score(prediction_pos, test_labels_p) \n",
     "print(\"Success rate positive samples:\", tp)\n",
+    "print(\"Estimation error positive samples:\", 1-tp)\n",
     "\n",
     "### F1 score\n",
     "fn = 1-tn\n",
@@ -1647,7 +1656,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now observe that the performance is much better using a larger number of bins."
+    "We now observe that the performance is much better using a larger number of bins. The accuracy is 100% and so the error is 0%. We can also understand this looking at the dimensions. Previously we had: `dim` = `15` * `7` * `16` * `10` = `16800` where 10 was the number of bins. Now, the new dimension is `dim` = `15` * `7` * `16` * `16` = `26880`. Having higher dimensional feature vector slows down a little bit the computation, but enables a better linear seperability of the data, which is exploited by SVM.\n",
+    "\n",
+    "\n",
+    "In the next cell we try another way to improve the performance, but this time by reducing the stride size by a factor 2. This will also increase the dimensions of the feature vector because we will be able to slide the block more times on the same region. This should lead to a better accuracy, but also to a longer computation time. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## YOUR CODE HERE\n",
+    "\n",
+    "### Tune HOG values\n",
+    "win_size     = (64,128)\n",
+    "block_size   = (16,16)\n",
+    "block_stride = (4,4)\n",
+    "cell_size = (4,4)\n",
+    "nbins = 16  ### Take larger number of bins\n",
+    "new_hog = cv2.HOGDescriptor(win_size, block_size, block_stride, cell_size, nbins)\n",
+    "\n",
+    "### Train feature extraction\n",
+    "training_features = []\n",
+    "labels = []\n",
+    "print (\"Calculating the descriptors for the positive samples and saving them\")\n",
+    "pos_feat, pos_label = _extract_feature(path_img_pos, descriptor=new_hog, label=1, hog_size=win_size)   \n",
+    "training_features.extend(pos_feat)\n",
+    "labels.extend(pos_label)\n",
+    "\n",
+    "#Negative features\n",
+    "print (\"Calculating the descriptors for the negative samples and saving them\")\n",
+    "neg_feat, neg_label = _extract_feature(path_img_neg, descriptor=new_hog, label=0, hog_size=win_size)   \n",
+    "training_features.extend(neg_feat)\n",
+    "labels.extend(neg_label)\n",
+    "print('Feature size: {}'.format(training_features[0].shape))\n",
+    "\n",
+    "new_model = LinearSVC(loss='hinge',max_iter=5000,C=1.0)\n",
+    "print (\"Training a Linear SVM Classifier\")\n",
+    "new_model.fit(training_features, labels)\n",
+    "\n",
+    "### Test features extraction\n",
+    "\n",
+    "path_img_neg = return_img_path(test_neg_path, folder='../data/INRIAPerson')   \n",
+    "test_neg_feat, label_neg_test = _extract_feature(path_img_neg, new_hog, label=0, hog_size=win_size)\n",
+    "\n",
+    "test_features_n = np.asarray(test_neg_feat)\n",
+    "test_labels_n = np.asarray(label_neg_test)\n",
+    "\n",
+    "print (\"Estimating the test data [Negative samples]\")\n",
+    "prediction_neg = new_model.predict(test_features_n)\n",
+    "tn = accuracy_score(prediction_neg, test_labels_n)          \n",
+    "print(\"Success rate negative samples:\", tn)\n",
+    "print(\"Estimation error negative samples:\", 1-tn)\n",
+    "\n",
+    "print (\"Estimating the test data [Positive samples]\")                               \n",
+    "test_pos_feat, label_pos_test = _extract_feature(path_img_pos, new_hog, label=1, hog_size=win_size)\n",
+    "                               \n",
+    "test_features_p = np.asarray(test_pos_feat)\n",
+    "test_labels_p = np.asarray(label_pos_test)\n",
+    "\n",
+    "prediction_pos = new_model.predict(test_features_p)\n",
+    "tp = accuracy_score(prediction_pos, test_labels_p) \n",
+    "print(\"Success rate positive samples:\", tp)\n",
+    "print(\"Estimation error positive samples:\", 1-tp)\n",
+    "\n",
+    "### F1 score\n",
+    "fn = 1-tn\n",
+    "fp = 1-tp\n",
+    "err = 2*tp/(2*tp+fn+fp)\n",
+    "\n",
+    "# Compute score\n",
+    "print('Estimation Error: {:.3f}%'.format(err * 100.0))\n",
+    "print('Success Rate: {:.3f}%'.format(err * 100.0))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The accuracy is 100%, but we use much higher dimensional data as in the initial implementation (96'512 vs 16'800 initially). The data became pefectly linearly seperable and therefore the error is 0%."
    ]
   },
   {
@@ -2554,10 +2643,17 @@
     "\n",
     "for i in range(8):\n",
     "    plt.subplot(2,4,i+1)\n",
-    "    plt.title(\"EigenFace #\"+str(i))\n",
+    "    plt.title(\"FisherFace #\"+str(i))\n",
     "    plt.imshow(fisherfaces[i, :].reshape(int(dim[0]/2), int(dim[1]/2)), cmap='gray') ### Eigenfaces instead of pc I think\n",
     "    plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the case of PCA, we could easily recognize faces on the images. In the case of the Fisherfaces, we can no longer distinguish faces. We may guess the shape of the eyes, mouth or nose on certain pictures, but other the picture seems to be noise."
    ]
   },
   {
@@ -2644,7 +2740,7 @@
    "source": [
     "**YOUR ANSWER**\n",
     "\n",
-    "Using LDA we get 100% accuracy. This means that no error was made during the prediction for both training and testing set."
+    "Using LDA we get 100% accuracy. This means that no error was made during the prediction for both training and testing set. This method performs better than PCA, where the accuracy was around 0.91 for the training and 0.88 for the testing set."
    ]
   },
   {
