--- a/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
+++ b/lab2/notebook/02_object_detection_and_recognition_2023.ipynb
@@ -335,15 +335,6 @@
     "        for x in range(width - t_width + 1):\n",
     "            image_patch = image[y:y+t_height, x:x+t_width]\n",
     "            dist_map[y, x] = dist_fn(image_patch, template)\n",
-    "            \n",
-    "\n",
-    "            \n",
-    "    # if dist_fn.__name__ == 'sqdiff_normed':\n",
-    "\n",
-    "    #     dist_map[dist_map > 1] = 1\n",
-    "\n",
-    "\n",
-    "    \n",
     "    return dist_map"
    ]
   },
@@ -614,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 353,
    "metadata": {
     "id": "kWK43sUIpCry"
    },
@@ -636,12 +627,13 @@
     "        return \"Invalid flag. Please choose 'min' or 'max'.\"\n",
     "\n",
     "    global_min, global_max, _, _ = cv.minMaxLoc(src)\n",
-    "    # print(global_min, global_max)\n",
+    "\n",
+    "    # Create a difference percentage matrix\n",
     "    if flag == \"min\":\n",
     "        diff_img = abs(global_min - src)/abs(global_max-global_min)\n",
     "    else:\n",
     "        diff_img = abs(src - global_max)/abs(global_max-global_min)\n",
-    "    # print(diff_img.shape)\n",
+    "\n",
     "    ret = np.where(diff_img <= params)\n",
     "    return ret\n",
     "    #######################\n"
@@ -669,7 +661,6 @@
     "    \n",
     "    # Draw all rectangles\n",
     "    for pt in list(zip(*locations[::-1])):\n",
-    "        # print(pt)\n",
     "        cv.rectangle(canvas, pt, (pt[0] + w, pt[1] + h), color, 2)\n",
     "       \n",
     "    return canvas\n",
@@ -683,7 +674,6 @@
     "distance_map_norm_corr = cv.matchTemplate(img_gray,template,cv.TM_CCOEFF_NORMED)\n",
     "# Use your function here!\n",
     "locations = multiMinMax(distance_map_norm_corr,'max',6e-2)\n",
-    "# print(locations)\n",
     "# Draw the ROIs \n",
     "img_rgb_holder = drawROIS(img_rgb, template, locations)\n",
     "# example:\n",
@@ -779,17 +769,14 @@
     "\n",
     "# Use multiMinMax function to get the locations of matching objects\n",
     "locations_template_1 = multiMinMax(dist_map_template_1, 'max', 5e-5)\n",
-    "print(len(locations_template_1[0]))\n",
     "locations_template_2 = multiMinMax(dist_map_template_2, 'max', 3e-2)\n",
-    "print(len(locations_template_2[0]))\n",
     "\n",
     "# Draw the ROIs on the RGB image for both templates\n",
     "img_rgb_with_ROIs_template_1 = drawROIS(p1_src_rgb, p1_template_1, locations_template_1)\n",
     "img_rgb_with_ROIs_template_2 = drawROIS(img_rgb_with_ROIs_template_1, p1_template_2, locations_template_2)\n",
     "\n",
     "# Display the image with detected objects\n",
-    "display_image(img_rgb_with_ROIs_template_2)\n",
-    "# print(len(locations_template_1[0]), len(locations_template_2))"
+    "display_image(img_rgb_with_ROIs_template_2)"
    ]
   },
   {
@@ -936,7 +923,6 @@
     "        center_coordinates = (int(object_rgb.shape[1]/2), int(object_rgb.shape[0]/2))\n",
     "        object_rgb = cv2.ellipse(object_rgb, center_coordinates, (40, 32), 0, 0, 360, (35, 35,35), 20)\n",
     "        object_gray = cv2.cvtColor(object_rgb, cv2.COLOR_BGR2GRAY)\n",
-    "        # print(object_gray.shape)\n",
     "        objects.append(object_gray)\n",
     "        \n",
     "    return objects"
@@ -1268,12 +1254,10 @@
     "    for i, template in enumerate(templates):\n",
     "        dist_map = cv.matchTemplate(hidden_gray, template, method, mask = masks[i])\n",
     "        val, loc = minMax(dist_map, flag)\n",
-    "        # max_loc = ([max_loc[1]], [max_loc[0]])\n",
     "        \n",
     "        h,w  = template.shape\n",
     "        found_objects.append(hidden_rgb[loc[0][0]:loc[0][0]+h, loc[1][0]:loc[1][0]+w])\n",
     "        img_with_ROI = drawROIS(hidden_rgb, template, loc)\n",
-    "        # print(\"Found template\", i+1, \"at\", loc[::-1], \"with value\", val)\n",
     "        hidden_rgb = img_with_ROI.copy()\n",
     "    \n",
     "    return hidden_rgb, found_objects"
