Update particles part

--- a/lab3/notebook/03_object_tracking_2023.ipynb
+++ b/lab3/notebook/03_object_tracking_2023.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +69,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "c1jx0nJ7SC9B"
@@ -144,7 +142,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "IJ8tsEhRSC9D"
@@ -180,7 +177,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "DlZAevNnSC9G"
@@ -243,7 +239,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "GMpclWVYSC9H"
@@ -277,7 +272,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "OTfs0doFSC9J"
@@ -320,7 +314,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "F2vL-chhSC9L"
@@ -397,7 +390,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "QO-ZEh20SC9M"
@@ -435,7 +427,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "pQR4zDNiSC9N"
@@ -507,8 +498,15 @@
     "        \"\"\"\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "\n",
-    "\n",
+    "        \n",
+    "        ### Random initialisation\n",
+    "        self.particles = np.stack([np.random.uniform(0, self.search_space[i],\n",
+    "                                    self.n_particles) for i in reversed(range(self.state_dims))]).T\n",
+    "        \n",
+    "        ### Compute weights\n",
+    "        size = self.n_particles\n",
+    "        self.weights = np.ones(size)/self.n_particles\n",
+    "        \n",
     "        return\n",
     "        \n",
     "    def update(self, frame):\n",
@@ -532,13 +530,14 @@
     "        \n",
     "        # YOUR CODE HERE\n",
     "        \n",
+    "        noise = np.random.normal(0, self.sigma_perturbation, self.particles.shape)\n",
+    "        self.particles += noise\n",
     "\n",
     "\n",
     "        return "
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "mMGH8yZpSC9N"
@@ -590,15 +589,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer**"
+    "**Your answer**\n",
+    "\n",
+    "Since we initialize randomly the particles, our initial state will be different each time we run the cell and it will also not exactly be the same as the reference. \n",
+    "\n",
+    "However, the repartition is rather the same as the expected behaviour since it spreads uniformally the particules over the image."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "GxdqKjXdSC9O"
@@ -633,11 +634,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer**"
+    "**Your answer**\n",
+    "\n",
+    "- It is observable that the state changes a little bit as we see that the red dots are not perfectly over the green ones. This means that the position of the particles has change for almost all the particles during the update and moved a few pixels away from the initialization.\n",
+    "\n",
+    "- It seems that the perturbaitons fit what we should expect as each red dot is only a few pixels away from a green one and this holds in all the directions. This means that the size of the diplacement caused by the noise is limited by the variance of the noise and this displacement happens in all the directions around the original point for the different particles. Furthermore, we see that for each green dot the probability of having the red dot in the neighbourhood decreases with the distance i.e. red dots tend to be close to green ones. This is clearly the effect of a Gaussian random noise over a point.\n",
+    "\n",
+    "- We could check the implementation of the perturbation by running several updates but keeping the position of the particles fixed instead of updating the state. We could then see if we always get different results for the position and if it matches a gaussian noise around the fixed position."
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Idea: try to apply this last part with fixed points and random noise\n",
+    "\n",
+    "## Also try to place two particles on Obama and presenter faces to show higher weights"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "jmY6DCP_SC9P"
@@ -682,7 +697,15 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
+    "    if (np.any(x)==False) or (np.any(y)==False) or (x.shape!=y.shape):\n",
+    "        return 0.0\n",
     "    \n",
+    "    else:\n",
+    "        r = np.sum(np.subtract(x, y, dtype=np.float32)**2)\n",
+    "        N = float(x.shape[0]*x.shape[1]*x.shape[2])\n",
+    "        sim = np.exp(-r/N/(2*(sigma**2)))\n",
+    "        \n",
+    "        return sim\n",
     "    \n"
    ]
   },
@@ -713,7 +736,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "_wGyR1iYSC9Q"
@@ -789,13 +811,24 @@
     "        \n",
     "        # YOUR CODE HERE\n",
     "        \n",
-    "\n",
+    "        ### 1. Patch extraction\n",
+    "        height, width = self.model.shape[:2]\n",
+    "        \n",
+    "        low_x = (self.particles[:, 0]-width/2).astype(int)\n",
+    "        low_y = (self.particles[:, 1]-height/2).astype(int)\n",
+    "        \n",
+    "        new_spot = [frame[low_y[i]:(low_y[i]+height), low_x[i]:(low_x[i]+width)] for i in range(self.n_particles)]\n",
+    "        \n",
+    "        ### 2. Compute similiarity\n",
+    "        self.weights = np.array([similarity_fn(k, self.model, self.sigma_similarity) for k in new_spot])\n",
+    "        \n",
+    "        ### 3. Normalization of the weights\n",
+    "        self.weights /= np.sum(self.weights)\n",
     "\n",
     "        return"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "eYZX_v8sSC9Q"
@@ -812,7 +845,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer**"
+    "**Your answer**\n",
+    "\n",
+    "*Observations*\n",
+    "- As we could expect, the weights initilization are the same for all particules because they are all set to $\\frac{1}{N_{particles}}$ at the beginning (= 0.005). We can observe that the updated weights are generally smaller than the initialization. However, we can see several peaks of higher values. The repartition is sparsed between lower value than the initial ones and high peaks. \n",
+    "\n",
+    "*High score definition and expectations*\n",
+    "- A high score (weight) means that the particle has a high similarity with the object model since the definition of the weight is `the probability that the particle is at the correct location of the object being tracked`. Therefore, it was to be expected that only a few weights should increase with the update as only a few particules are located at places that could match the model. \n",
+    "\n",
+    "*Range*\n",
+    "- The sum of the weights must always be one, so the range of these is between 0 and 1. But after one upadate the values are spread between 0 and 1 with most of them close to 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Idea: perform several updates and show it doesn't change much since update adds only small state changes"
    ]
   },
   {
@@ -848,7 +897,16 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Check if w_init = 1/n_particules\n",
+    "print(w_init[0])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "WIC8chCFSC9Q"
@@ -935,7 +993,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ft-HObRiSC9S"
@@ -952,7 +1009,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer**"
+    "**Your answer**\n",
+    "\n",
+    "It can be observed that all the points are converging to the face of the presenter. It is not as precise as the expected one"
    ]
   },
   {
@@ -992,7 +1051,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "AyN5tYOfSC9S"
@@ -1057,7 +1115,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "0isYpiLwSC9T"
@@ -1091,7 +1148,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "fk0I_o-USC9U"
@@ -1186,7 +1242,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "9txQVxVCSC9U"
@@ -1865,9 +1920,9 @@
    "hash": "907933357ae3fbb9d3056f41106fcc50cd829035cc4c8630c07b8c7aaf7c597e"
   },
   "kernelspec": {
-   "display_name": "IPLabEnv",
+   "display_name": "Exam",
    "language": "python",
-   "name": "iplabenv"
+   "name": "exam"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1879,7 +1934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
