--- a/lab3/notebook/03_object_tracking_2023.ipynb
+++ b/lab3/notebook/03_object_tracking_2023.ipynb
@@ -649,7 +649,7 @@
    "source": [
     "## Idea: try to apply this last part with fixed points and random noise\n",
     "\n",
-    "## Also try to place two particles on Obama and presenter faces to show higher weights"
+    "## Also try to place two particles on Obama and Romney faces to show higher weights"
    ]
   },
   {
@@ -987,6 +987,22 @@
     "        \n",
     "        # YOUR CODE HERE\n",
     "        \n",
+    "        ind, size, wght = self.indexes, self.n_particles, self.weights.T\n",
+    "        \n",
+    "        ### Resample using the updated weights\n",
+    "        new_dist = np.random.choice(ind, size=size, replace=True, p=wght)\n",
+    "        \n",
+    "        ### Apply to particle\n",
+    "        self.particles = np.array(self.particles[new_dist])\n",
+    "        \n",
+    "        ### Correction for particles out of range\n",
+    "        height, width = self.search_space[:2]\n",
+    "        ### Along witdth\n",
+    "        self.particles[:, 0] = np.where(self.particles>0, self.particles, 0)\n",
+    "        self.particles[:, 0] = np.where(self.particles<width, self.particles, width-1)\n",
+    "        ### Along height\n",
+    "        self.particles[:, 1] = np.where(self.particles>0, self.particles, 0)\n",
+    "        self.particles[:, 1] = np.where(self.particles<height, self.particles, height-1)\n",
     "\n",
     "\n",
     "        return"
@@ -1011,7 +1027,9 @@
    "source": [
     "**Your answer**\n",
     "\n",
-    "It can be observed that all the points are converging to the face of the presenter. It is not as precise as the expected one"
+    "It can be observed that only after two updates, all the particles are converging to Romney's face. It is not as precise as the expected behviour, but they are all aggregated at the same place corresponding to the model.\n",
+    "\n",
+    "The particles converge there since at each update we calculate the weights at that time and see which particle is in a region that could match the model i.e. has a high weight (step 2). We then use those weights to resample the particle state (step 3). This means that particles with a higher weight will attract others that have smaller weight since the latter are less likely to match the model. Two updates are sufficient to see the benefits of this technique. Performing more update should slightly increase the precision."
    ]
   },
   {
@@ -1052,6 +1070,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Idea: preform more updates and show performance and plot weight evolution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "AyN5tYOfSC9S"
    },
@@ -1083,7 +1108,15 @@
     "    \"\"\"\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "\n",
+    "    \n",
+    "    ### Load params\n",
+    "    p_filter = params['tracker']    \n",
+    "    \n",
+    "    ### Track on the frame\n",
+    "    p_filter.update(frame)\n",
+    "    \n",
+    "    ### Visualize the result\n",
+    "    res = pf.visualize_filter(np.copy(frame))\n",
     "\n",
     "    return res"
    ]
@@ -1131,7 +1164,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer**"
+    "**Your answer**\n",
+    "\n",
+    "The tracking seems to be rather good. At the beginning it is less accurate as we did not perform enough updates to have a perfect result, but then we see that the particles have completely converged to the center of Romney's face and thus, the tracking result is really good. \n",
+    "\n",
+    "For the last frames, even if Romney's face is directed towards Obama and does not face the camera, the tracking still performs well even if it is a little bit less accurate as it cannot perfectly match the model (Romney's face facing the camera)."
    ]
   },
   {
@@ -1144,7 +1181,11 @@
    "outputs": [],
    "source": [
     "\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "for i, r in enumerate(results):\n",
+    "    if i % 30 == 0:\n",
+    "        plt.figure()\n",
+    "        display_image(r)"
    ]
   },
   {
