--- a/lab3/notebook/03_object_tracking_2023.ipynb
+++ b/lab3/notebook/03_object_tracking_2023.ipynb
@@ -594,9 +594,9 @@
    "source": [
     "**Your answer**\n",
     "\n",
-    "Since we initialize randomly the particles, our initial state will be different each time we run the cell and it will also not exactly be the same as the reference. \n",
+    "Since we initialize randomly the particles (uniformaly spread over the whole frame), our initial state will be different each time we run the cell and it will also not be exactly the same as the reference. \n",
     "\n",
-    "However, the repartition is rather the same as the expected behaviour since it spreads uniformally the particules over the image."
+    "However, the repartition is rather the same as the expected behaviour since it spreads uniformaly the particules over the image."
    ]
   },
   {
@@ -636,20 +636,60 @@
    "source": [
     "**Your answer**\n",
     "\n",
-    "- It is observable that the state changes a little bit as we see that the red dots are not perfectly over the green ones. This means that the position of the particles has change for almost all the particles during the update and moved a few pixels away from the initialization.\n",
+    "- It is observable that particle the state changes a little bit as we see that the red dots are not perfectly over the green ones. This means that the position of the particles has changed for almost all the particles during the update and moved a few pixels away from the initial location.\n",
     "\n",
-    "- It seems that the perturbaitons fit what we should expect as each red dot is only a few pixels away from a green one and this holds in all the directions. This means that the size of the diplacement caused by the noise is limited by the variance of the noise and this displacement happens in all the directions around the original point for the different particles. Furthermore, we see that for each green dot the probability of having the red dot in the neighbourhood decreases with the distance i.e. red dots tend to be close to green ones. This is clearly the effect of a Gaussian random noise over a point.\n",
+    "- It seems that the perturbations fit what we should expect as each red dot is only a few pixels away from a green one and this holds in all the directions. This means that the size of the diplacement caused by the noise is restrained by the variance of the noise and `this displacement happens in all the directions` around the original point for the different particles. Furthermore, we see that for each green dot the probability of having the red dot in the neighbourhood decreases with the distance i.e. ?red dots are more likely to be close to green ones?. This is clearly the effect of a perturbation caused by a gaussian random noise (`perturbation in all the direction` + `the closer from the central point, the more likely it is`).\n",
     "\n",
-    "- We could check the implementation of the perturbation by running several updates but keeping the position of the particles fixed instead of updating the state. We could then see if we always get different results for the position and if it matches a gaussian noise around the fixed position."
+    "- We could check the implementation of the perturbation by running several updates, store the new locations and observe how the perturbations behave around one or several points. We could then see if we always get different results for the position and if it matches a gaussian noise around the fixed position. A little example is made in the next cells."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Idea: try to apply this last part with fixed points and random noise\n",
+    "### Visualization of the perturbation of the particle state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pf = ParticleFilterStepOne(model=model,\n",
+    "                           search_space=frame.shape[:2],\n",
+    "                           n_particles=200,\n",
+    "                           state_dims=2)\n",
     "\n",
-    "## Also try to place two particles on Obama and Romney faces to show higher weights"
+    "fig, ax = plt.subplots(2, 1, figsize=(8, 10))\n",
+    "\n",
+    "pf.update(frame)\n",
+    "canvas_perturbated = pf.draw_particles(np.copy(canvas), color=(0, 0, 255))\n",
+    "display_image(canvas_perturbated, axes=ax[0])\n",
+    "ax[0].set_title('Update 1')\n",
+    "pf.update(frame)\n",
+    "canvas_perturbated = pf.draw_particles(np.copy(canvas), color=(0, 0, 255))\n",
+    "display_image(canvas_perturbated, axes=ax[1])\n",
+    "ax[1].set_title('Update 2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noise = np.random.normal(0, 1, (2, 50))\n",
+    "\n",
+    "plt.title(\"Random noise variance with 1 - 50 upates for one particle\")\n",
+    "plt.plot((noise)[0], (noise)[1], '.');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see on the two first pictures where two differents updates were made, the red particules displaced a little bit in a random manner around the green points. If we consider the displacement of 1 red particles around its central point (a green dot) and perform 50 updates instead of 2, we should observe a displacement similar to the random noise plotted in the previous cell (centered at (0, 0)). This should be the expected behaviour of the perturbation since we use the same function `np.random.normal` but just with a different variance. "
    ]
   },
   {
@@ -848,20 +888,13 @@
     "**Your answer**\n",
     "\n",
     "*Observations*\n",
-    "- As we could expect, the weights initilization are the same for all particules because they are all set to $\\frac{1}{N_{particles}}$ at the beginning (= 0.005). We can observe that the updated weights are generally smaller than the initialization. However, we can see several peaks of higher values. The repartition is sparsed between lower value than the initial ones and high peaks. \n",
+    "- As we could expect, the weights initilization are the same for all particules because they are all set to $\\frac{1}{N_{particles}}$ at the beginning (= 0.005). We can observe that the updated weights are generally a bit smaller than the initialization. However, we can see several peaks of higher values. The repartition is sparsed between lower value than the initial ones and high peaks. \n",
     "\n",
     "*High score definition and expectations*\n",
     "- A high score (weight) means that the particle has a high similarity with the object model since the definition of the weight is `the probability that the particle is at the correct location of the object being tracked`. Therefore, it was to be expected that only a few weights should increase with the update as only a few particules are located at places that could match the model. \n",
     "\n",
     "*Range*\n",
-    "- The sum of the weights must always be one, so the range of these is between 0 and 1. But after one upadate the values are spread between 0 and 1 with most of them close to 0."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Idea: perform several updates and show it doesn't change much since update adds only small state changes"
+    "- The sum of the weights must always be one as we are normalizing the weights at the end of `reweight_impl`, so the range of these is between 0 and 1. But after one upadate the values are spread between 0 and 1 with most of them close to 0."
    ]
   },
   {
@@ -904,6 +937,144 @@
    "source": [
     "### Check if w_init = 1/n_particules\n",
     "print(w_init[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Performing updates to see the evolution of the weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update tracker using current frame\n",
+    "pf.update(frame)\n",
+    "\n",
+    "# Show updated weights\n",
+    "w = pf.weights\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(w_init)\n",
+    "plt.plot(w)\n",
+    "plt.title('Weights after `Reweight` step - Update 2')\n",
+    "plt.legend(['Weights initialization',\n",
+    "            'Updated weights'])\n",
+    "plt.show()\n",
+    "\n",
+    "# Update tracker using current frame\n",
+    "pf.update(frame)\n",
+    "\n",
+    "# Show updated weights\n",
+    "w = pf.weights\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(w_init)\n",
+    "plt.plot(w)\n",
+    "plt.title('Weights after `Reweight` step - Update 3')\n",
+    "plt.legend(['Weights initialization',\n",
+    "            'Updated weights'])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see on the plots corresponding to `Update 2` and `Update 3`, the weights remains rather the same i. e. the peaks always appear at the same particles and only their size changes a little bit. This is because of the gaussian perturbation that happens at each update. The particles only move a little bit around their previous locations but stay in the neighbourhood and therefore also almost keep the comparable weights (either peak or low value). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize the meaning of the weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Extract Obama's face ###\n",
+    "\n",
+    "height, width = model.shape[:2]\n",
+    "miny_ob = 110\n",
+    "maxy_ob = miny_ob + height\n",
+    "minx_ob = 968\n",
+    "maxx_ob = minx_ob + width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Particle centered on Romney's face\n",
+    "part_one = np.array([(minx+maxx)/2, (miny+maxy)/2]) \n",
+    "\n",
+    "### Particle centered on Obama's face\n",
+    "part_two = np.array([(minx_ob+maxx_ob)/2, (miny_ob+maxy_ob)/2]) \n",
+    "\n",
+    "parts = [part_one, part_two]\n",
+    "\n",
+    "### Draw 198 other partcles at random in a region without faces ###\n",
+    "new_parts = np.stack([np.random.uniform(0, 100, 198) for i in reversed(range(2))]).T\n",
+    "new_spot = []\n",
+    "\n",
+    "### Load region around each particle ###\n",
+    "for p in parts: \n",
+    "    low_x = (p[0]-width/2).astype(int)\n",
+    "    low_y = (p[1]-height/2).astype(int)\n",
+    "    new_spot.append(frame[low_y:(low_y+height), low_x:(low_x+width)]) \n",
+    "\n",
+    "for p in new_parts:\n",
+    "    low_x = (p[0]-width/2).astype(int)\n",
+    "    low_y = (p[1]-height/2).astype(int)\n",
+    "    new_spot.append(frame[low_y:(low_y+height), low_x:(low_x+width)])\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(8, 10))\n",
+    "display_image(new_spot[0], axes=ax[0])\n",
+    "display_image(new_spot[1], axes=ax[1])\n",
+    "\n",
+    "### Compute similiarity ###\n",
+    "weights1 = np.array([similarity_fn(k, model, 20) for k in new_spot[2:]])\n",
+    "weights2 = np.array([similarity_fn(k, model, 20) for k in new_spot[1:]])\n",
+    "weights3 = np.array([similarity_fn(k, model, 20) for k in new_spot])\n",
+    "### Normalization of the weights ###\n",
+    "weights1 /= np.sum(weights1)\n",
+    "weights2 /= np.sum(weights2)\n",
+    "weights3 /= np.sum(weights3)\n",
+    "\n",
+    "fig, ax = plt.subplots(3, 1, figsize=(8, 10))\n",
+    "ax[0].set_title('Weights without Romneys and Obamas Face')\n",
+    "ax[0].plot(weights1)\n",
+    "ax[1].set_title('Weights without Romneys Face')\n",
+    "ax[1].plot(weights2)\n",
+    "ax[2].set_title('Weights with both Romney and Obamas Face')\n",
+    "ax[2].plot(weights3)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this part, we took two particles of the picture with one centered on the model (Romney's face) and another centered on Obama's face. The other particles were drawn randomly in a region of the picture where no faces appear. We then plot the weights to see how they behave.\n",
+    "\n",
+    "We can understand thanks to this example that the weight is the measure of \"how well\" a region centered on a considered particle matches our model, considering the following oberservations:\n",
+    "\n",
+    "- It is observable that on the `first plot`, the weights are more or less randomly distributed because the particles lay in a region that is very different from the model and the particles on Obama's and Romney's face are not considered. **So nothing really matches well the model**.\n",
+    "\n",
+    "- However, on the `second plot` we can see that the weight of the first particle (corresponding to Obama's face) is roughly 1 while the others are ~0. **The particle centered on Obama's face best matches the model** since the model is also a face and the particle on Romney's face is not considered. Therefore it gets a weight of ~1 and the other particles that lay on the background have their weights set to ~0.\n",
+    "\n",
+    "- Finally, on the `third plot` containing all the particles including the ones centered Obama's and Romney's face, we can observe that the first particle (corresponding to Romney's face) got a weight of 1 while the others are set to 0. Even the particle centered on Obama is ignored and its weight is ~0. **We can conclude that the implementation has recognized the model and therefore has given a weight of 1 to it.**"
    ]
   },
   {
@@ -998,11 +1169,11 @@
     "        ### Correction for particles out of range\n",
     "        height, width = self.search_space[:2]\n",
     "        ### Along witdth\n",
-    "        self.particles[:, 0] = np.where(self.particles>0, self.particles, 0)\n",
-    "        self.particles[:, 0] = np.where(self.particles<width, self.particles, width-1)\n",
+    "        self.particles[:, 0] = np.where(self.particles[:, 0]>0, self.particles[:, 0], 0)\n",
+    "        self.particles[:, 0] = np.where(self.particles[:, 0]<width, self.particles[:, 0], width-1)\n",
     "        ### Along height\n",
-    "        self.particles[:, 1] = np.where(self.particles>0, self.particles, 0)\n",
-    "        self.particles[:, 1] = np.where(self.particles<height, self.particles, height-1)\n",
+    "        self.particles[:, 1] = np.where(self.particles[:, 1]>0, self.particles[:, 1], 0)\n",
+    "        self.particles[:, 1] = np.where(self.particles[:, 1]<height, self.particles[:, 1], height-1)\n",
     "\n",
     "\n",
     "        return"
@@ -1029,7 +1200,7 @@
     "\n",
     "It can be observed that only after two updates, all the particles are converging to Romney's face. It is not as precise as the expected behviour, but they are all aggregated at the same place corresponding to the model.\n",
     "\n",
-    "The particles converge there since at each update we calculate the weights at that time and see which particle is in a region that could match the model i.e. has a high weight (step 2). We then use those weights to resample the particle state (step 3). This means that particles with a higher weight will attract others that have smaller weight since the latter are less likely to match the model. Two updates are sufficient to see the benefits of this technique. Performing more update should slightly increase the precision."
+    "The particles converge there since at each update we calculate the weights at that time and see which particle is in a region that could match the model i.e. has a high weight (step 2). We then use those weights to resample the particle state (step 3). This means that particles with a higher weight will attract others that have smaller weight since the latter are less likely to match the model. Two updates are sufficient to see the benefits of this technique. Performing more update might slightly increase the precision, but not for sure since a random process is involved in the resampling."
    ]
   },
   {
@@ -1072,7 +1243,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Idea: preform more updates and show performance and plot weight evolution"
+    "### Visualization of the evolution of the weights after resampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pf = ParticleFilterStepThree(model=model,\n",
+    "                             search_space=frame.shape[:2],\n",
+    "                             n_particles=200,\n",
+    "                             sigma_perturbation=20.0,\n",
+    "                             sigma_similarity=15.0,\n",
+    "                             state_dims=2)\n",
+    "\n",
+    "# Plot initial particle position\n",
+    "initial_particles = pf.draw_particles(np.copy(frame))\n",
+    "w_init = np.copy(pf.weights)\n",
+    "\n",
+    "fig, ax = plt.subplots(3, 2, figsize=(14, 10))\n",
+    "ax[0][0].plot(w)\n",
+    "ax[0][0].set_title('Initial weights')\n",
+    "display_image(initial_particles, axes=ax[0][1])\n",
+    "\n",
+    "for i in range(2):\n",
+    "    pf.update(frame)\n",
+    "    w = pf.weights\n",
+    "    ax[i+1][0].plot(w)\n",
+    "    ax[i+1][0].set_title('Weights after update '+str(i+1))\n",
+    "    resampled_particules = pf.draw_particles(np.copy(frame))\n",
+    "    display_image(resampled_particules, axes=ax[i+1][1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thanks to the previous cell, we can understand the principle of the resampling and visualize its benefit. After 3 updates it is observable that weights are slightly better distributed. In an ideal case, all the particles would be at the same place (at the center of the model) and have the same weights i. e. be uniformaly distributed. Here this is not the case because of the random process while resampling, the particles are not exactly at the same position. Therefore, particles that are really close to the center of the model get higher weights than others that are a bit further away (even if they are not far away from the center) get smaller weights or sometimes 0. "
    ]
   },
   {
@@ -1961,9 +2170,9 @@
    "hash": "907933357ae3fbb9d3056f41106fcc50cd829035cc4c8630c07b8c7aaf7c597e"
   },
   "kernelspec": {
-   "display_name": "Exam",
+   "display_name": "IPLAB",
    "language": "python",
-   "name": "exam"
+   "name": "iplab"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1975,7 +2184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
