--- a/lab3/notebook/03_object_tracking_2023.ipynb
+++ b/lab3/notebook/03_object_tracking_2023.ipynb
@@ -1281,7 +1281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thanks to the previous cell, we can understand the principle of the resampling and visualize its benefit. After 3 updates it is observable that weights are slightly better distributed. In an ideal case, all the particles would be at the same place (at the center of the model) and have the same weights i. e. be uniformaly distributed. Here this is not the case because of the random process while resampling, the particles are not exactly at the same position. Therefore, particles that are really close to the center of the model get higher weights than others that are a bit further away (even if they are not far away from the center) get smaller weights or sometimes 0. "
+    "Thanks to the previous cell, we can understand the principle of the resampling and visualize its benefit. After 3 updates it is observable that weights are slightly better distributed because particles have converged to a region that better matches the model. In an ideal case, all the particles would be at the same place (at the center of the model) and have the same weights i. e. be uniformaly distributed. Here this is not the case because of the random process while resampling, the particles are not exactly at the same position. Therefore, particles that are really close to the center of the model get higher weights than others that are a bit further away (even if they are not far away from the center) get smaller weights or sometimes 0. "
    ]
   },
   {
